--- a/css/main.css
+++ b/css/main.css
@@ -10,9 +10,15 @@ img {
 h1 {
   font-family: "PT Sans", sans-serif;
   font-size: 1.5rem;
-  font-weight: bold;
 }
 
 ol {
   list-style-type: none;
+}
+
+a {
+  font-family: "PT Sans", sans-serif;
+  font-size: 0.8rem;
+  line-height: 1.5;
+  text-decoration: none;
 }
